# Meta-Hackathon

./: README.md  client.py  inference.py  models.py
code_review_env/: .gitignore  Dockerfile  README.md  app.py  client.py  env.example  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
code_review_env/server/: app.py  environment.py
code_review_env/tests/: test_client.py  tests.py
server/: app.py  code_review_env_environment.py
